# netlist-tracer

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  netlist_parser.py  netlist_tracer.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: 01_parse_and_inspect.py  02_trace_signal.py  03_build_and_load_cache.py  04_trace_multipin.py  06_parse_edif.py
src/netlist_tracer/: __init__.py  _logging.py  exceptions.py  model.py  parser.py  tracer.py
src/netlist_tracer/cli/: parse.py  trace.py
src/netlist_tracer/parsers/: __init__.py  _numerics.py  detect.py  edif.py  includes.py  peek.py  spectre.py  spf.py  spice.py  spice_helpers.py
src/netlist_tracer/parsers/verilog/: __init__.py  instances.py  orchestrate.py  preprocess.py  specialize.py  structure.py
src/nettrace/: __init__.py  _logging.py  exceptions.py  model.py  parser.py  tracer.py
src/nettrace/cli/: parse.py  trace.py
src/nettrace/parsers/: spectre.py  spice.py
src/nettrace/parsers/verilog/: instances.py  orchestrate.py  specialize.py  structure.py
tests/: __init__.py  _capture_baseline.py  conftest.py  test_cache.py  test_cache_roundtrip.py  test_cache_versioning.py  test_cli.py  test_compat_shim.py  test_dispatch.py  test_edif_improvements.py  test_edif_regression.py  test_format.py  test_format_detect.py  test_format_override.py  test_include_support.py  test_local_smoke.py  test_ngspice_regression.py  test_parser_edif.py  test_parser_spectre.py  test_parser_spf.py  test_parser_spice.py  test_parser_verilog.py  test_perf_harness.py  test_picorv32_regression.py  test_real_dspf_smoke.py  test_sky130_regression.py  test_spectre.py  test_spice_quickwins.py  test_sv_interface.py  test_tracer.py  test_utf8_tolerance.py  test_verilog_a.py  test_verilog_quickwins.py
tests/fixtures/golden/: AND_gate_baseline.json  cli_picorv32_clk_baseline.txt  hic2_ft_baseline.json  n_bit_counter_baseline.json  one_counter_baseline.json  picorv32_baseline.json  picorv32_cache_baseline.json  sky130_fd_sc_hd__inv_1_baseline.json
tests/fixtures/synthetic/: cdl_basic.cdl  concat_alias.v  edif_bus_array.edif  edif_multi_library.edif  edif_multi_library_collision.edif  edif_with_properties.edif  edif_with_rename.edif  generate_loop.v  include_2level_leaf.sp  include_2level_mid.sp  include_2level_top.sp  include_cycle_a.sp  include_cycle_b.sp  include_cycle_c.sp  interface_with_modports.sv  latin1_comment.v  nested_generate.v  param_specialize.v  parameterized_interface.sv  simple.spf  simple_interface.sv  spectre_basic.scs  spf_dspf_marker.txt  spice_basic.sp  spice_continuation_across_comment.sp  spice_controlled_sources.sp  spice_coupled_inductor.sp  spice_edge_crlf.sp  spice_edge_long_line.sp  spice_edge_mixed_case.sp  spice_edge_tab_continuation.sp  spice_edge_utf8_bom.sp  spice_flat_deck.sp  spice_global_directive.sp  spice_inline_comments.sp  supply_constant.cdl  trivial_interface.sv  verilog_a_leaf.va  verilog_a_parent.v  verilog_defparam.v  (+3 more)
tests/fixtures/synthetic/mixed_dir/: parasitic.spf  tb.sp
