[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nettrace"
version = "0.1.0"
description = "Multi-format netlist parser and bidirectional signal tracer (Verilog/SystemVerilog, SPICE/CDL, Spectre)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Parvez Ahmmed" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
nettrace = "nettrace.cli.trace:main"
netparse = "nettrace.cli.parse:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nettrace"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true

[[tool.mypy.overrides]]
module = "nettrace.parsers.verilog.*"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with -m \"not slow\")"]
