[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netlist-tracer"
version = "0.3.0"
description = "Multi-format netlist parser and bidirectional signal tracer (Verilog/SystemVerilog, SPICE/CDL, Spectre)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Parvez Ahmmed" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
netlist-tracer = "netlist_tracer.cli.trace:main"
netlist-parser = "netlist_tracer.cli.parse:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netlist_tracer"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "UP045", "UP007"]  # UP007: Union[X, Y] pipe syntax requires Python 3.10+ at runtime; project supports 3.9

[tool.mypy]
# Note: project supports Python >=3.9 at runtime, but mypy 2.0+ dropped 3.9 as a
# target version (must be 3.10+). The CI matrix runs the full test suite on 3.9
# to catch any 3.10-only constructs that slip past mypy. `from __future__ import
# annotations` is used throughout so PEP 585 lowercase generics work on 3.9.
python_version = "3.10"
strict = false
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = false
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "netlist_tracer.parsers.edif"
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "netlist_tracer.parsers.verilog.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "netlist_tracer.tracer"
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m \"not slow\")",
    "local: marks tests as local smoke tests (deselect with -m \"not local\")",
]
